<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/inputA_editText"
        android:layout_width="73dp"
        android:layout_height="63dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number|textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.474"
        tools:text="A" />

    <TextView
        android:id="@+id/sign_textView"
        android:layout_width="56dp"
        android:layout_height="62dp"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_result"
        app:layout_constraintEnd_toStartOf="@+id/inputB_editText"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toEndOf="@+id/inputA_editText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.788" />

    <EditText
        android:id="@+id/inputB_editText"
        android:layout_width="83dp"
        android:layout_height="61dp"
        android:layout_marginEnd="72dp"
        android:accessibilityHeading="true"
        android:accessibilityLiveRegion="none"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number|textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/inputA_editText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471"
        tools:text="B" />

    <TextView
        android:id="@+id/textView_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wynik_powy_szego_dzia_ania_to"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputA_editText"
        app:layout_constraintVertical_bias="0.267" />

    <Button
        android:id="@+id/execute_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/wykonaj_dzia_anie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="259dp"
        android:layout_height="198dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/execute_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/add_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dodawanie" />

        <RadioButton
            android:id="@+id/sub_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/odejmowanie" />

        <RadioButton
            android:id="@+id/mul_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mno_enie" />

        <RadioButton
            android:id="@+id/div_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/dzielenie" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>